--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <link rel="stylesheet" href="style.css">
+    <title>Document Example</title>
+</head>
+<body>
+    
+</body>
+
+</html>
